Added functionality to StockQueryHandler.  Fixed a bug in WolframQueryHandler.handleQuery that was causing exceptions.  Made MessageHandler.onGuildMessageReceived ignore Messages that are sent via Webhook.  Added StockQueryHandler initialization logic to ConfigurationGenerator.